--- a/driver-interface.html
+++ b/driver-interface.html
@@ -69,7 +69,10 @@
             width: 70px;
             height: 70px;
             margin-bottom: 10px;
-            filter: drop-shadow(0 4px 8px rgba(0,0,0,0.3));
+            background: white;
+            border-radius: 50%;
+            padding: 6px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
         }
 
         .header h1 {
