--- a/nurse-interface.html
+++ b/nurse-interface.html
@@ -1023,8 +1023,8 @@
                     </div>
                 </div>
                 <div class="form-actions">
-                    <button type="submit" class="btn btn-primary" id="submitBtn" data-en="📤 Submit Record" data-ar="📤 إرسال السجل">📤 Submit Record</button>
-                    <button type="button" class="btn btn-secondary" onclick="resetForm()" data-en="🗑️ Clear Form" data-ar="🗑️ مسح النموذج">🗑️ Clear Form</button>
+                    <button type="submit" class="btn btn-primary" id="submitBtn" data-en="Submit Record" data-ar="إرسال السجل">Submit Record</button>
+                    <button type="button" class="btn btn-secondary" onclick="resetForm()" data-en="Clear Form" data-ar="مسح النموذج">Clear Form</button>
                 </div>
             </form>
         </div>
