--- a/nurse-interface.html
+++ b/nurse-interface.html
@@ -1014,8 +1014,8 @@
                         <input type="text" id="destination" required data-placeholder-en="e.g., Hospital/Center name" data-placeholder-ar="مثال: اسم المستشفى/المركز">
                     </div>
                     <div class="form-group full-width">
-                        <label data-en="Patient Condition / Diagnosis" data-ar="حالة المريض / التشخيص">Patient Condition / Diagnosis</label>
-                        <textarea id="diagnosis" required data-placeholder-en="Enter patient condition and diagnosis..." data-placeholder-ar="أدخل حالة المريض والتشخيص..."></textarea>
+                        <label data-en="Patient Condition / Diagnosis (Optional)" data-ar="حالة المريض / التشخيص (اختياري)">Patient Condition / Diagnosis (Optional)</label>
+                        <textarea id="diagnosis" rows="2" style="min-height: 50px; max-height: 80px; font-size: 13px;" data-placeholder-en="Optional - Enter patient condition..." data-placeholder-ar="اختياري - أدخل حالة المريض..."></textarea>
                     </div>
                     <div class="form-group">
                         <label data-en="Registered By (Nurse Name)" data-ar="المسجل (اسم الممرضة)">Registered By (Nurse Name)</label>
@@ -2002,7 +2002,6 @@
                 { id: 'returnTimeHour', name: 'Return Time' },
                 { id: 'returnTimeMinute', name: 'Return Time' },
                 { id: 'destination', name: 'Destination' },
-                { id: 'diagnosis', name: 'Diagnosis' },
                 { id: 'nurseName', name: 'Nurse Name' }
             ];
             
