--- a/settings-interface.html
+++ b/settings-interface.html
@@ -418,7 +418,7 @@
             <div class="header-brand">
                 <img src="moh-logo.png" alt="شعار وزارة الصحة" class="header-logo">
                 <div class="header-info">
-                    <h1>⚙️ إعدادات النظام</h1>
+                    <h1><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="width:28px;height:28px;"><circle cx="12" cy="12" r="3"/><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1-2.83 2.83l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-4 0v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83-2.83l.06-.06A1.65 1.65 0 0 0 4.68 15a1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1 0-4h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 2.83-2.83l.06.06A1.65 1.65 0 0 0 9 4.68a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 4 0v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 2.83l-.06.06A1.65 1.65 0 0 0 19.4 9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 0 4h-.09a1.65 1.65 0 0 0-1.51 1z"/></svg> إعدادات النظام</h1>
                     <p class="header-subtitle">المديرية العامة للخدمات الصحية بمحافظة ظفار</p>
                     <p class="header-subtitle">ولاية سدح - مركز حاسك الصحي</p>
                 </div>
@@ -433,14 +433,14 @@
 
         <!-- Info Box -->
         <div class="info-box">
-            <span class="info-box-icon">ℹ️</span>
+            <span class="info-box-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="width:20px;height:20px;"><circle cx="12" cy="12" r="10"/><line x1="12" y1="16" x2="12" y2="12"/><line x1="12" y1="8" x2="12.01" y2="8"/></svg></span>
             <p>التغييرات التي تجريها هنا ستُحفظ في النظام. يمكنك إضافة أو تعديل أو حذف المستخدمين وسيارات الإسعاف.</p>
         </div>
 
         <!-- Nurses Section -->
         <div class="section">
             <div class="section-header">
-                <h2>إدارة الممرضين والممرضات</h2>
+                <h2><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="width:22px;height:22px;"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="8.5" cy="7" r="4"/><line x1="20" y1="8" x2="20" y2="14"/><line x1="23" y1="11" x2="17" y2="11"/></svg> إدارة الممرضين والممرضات</h2>
                 <button class="btn btn-primary" onclick="openNurseModal()">
                     <span>+</span> إضافة ممرض/ة
                 </button>
@@ -451,7 +451,7 @@
         <!-- Drivers Section -->
         <div class="section">
             <div class="section-header">
-                <h2>👨‍✈️ إدارة السائقين</h2>
+                <h2><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="width:22px;height:22px;"><rect x="1" y="3" width="15" height="13"/><polygon points="16 8 20 8 23 11 23 16 16 16 16 8"/><circle cx="5.5" cy="18.5" r="2.5"/><circle cx="18.5" cy="18.5" r="2.5"/></svg> إدارة السائقين</h2>
                 <button class="btn btn-primary" onclick="openDriverModal()">
                     <span>+</span> إضافة سائق
                 </button>
@@ -462,7 +462,7 @@
         <!-- Vehicles Section -->
         <div class="section">
             <div class="section-header">
-                <h2>🚑 إدارة سيارات الإسعاف</h2>
+                <h2><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="width:22px;height:22px;"><rect x="1" y="3" width="15" height="13"/><polygon points="16 8 20 8 23 11 23 16 16 16 16 8"/><circle cx="5.5" cy="18.5" r="2.5"/><circle cx="18.5" cy="18.5" r="2.5"/><line x1="7" y1="7" x2="7" y2="11"/><line x1="5" y1="9" x2="9" y2="9"/></svg> إدارة سيارات الإسعاف</h2>
                 <button class="btn btn-primary" onclick="openVehicleModal()">
                     <span>+</span> إضافة سيارة
                 </button>
@@ -473,7 +473,7 @@
         <!-- Export/Import Section -->
         <div class="section">
             <div class="section-header">
-                <h2>💾 تصدير واستيراد البيانات</h2>
+                <h2><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="width:22px;height:22px;"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" y1="15" x2="12" y2="3"/></svg> تصدير واستيراد البيانات</h2>
             </div>
             <div style="display: flex; gap: 12px; flex-wrap: wrap;">
                 <button class="btn btn-success" onclick="exportData()">تصدير البيانات</button>
@@ -746,7 +746,7 @@
             if (nurses.length === 0) {
                 container.innerHTML = `
                     <div class="empty-state">
-                        <div class="empty-state-icon">👩‍⚕️</div>
+                        <div class="empty-state-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" style="width:48px;height:48px;opacity:0.4;"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="8.5" cy="7" r="4"/><line x1="20" y1="8" x2="20" y2="14"/><line x1="23" y1="11" x2="17" y2="11"/></svg></div>
                         <p>لا يوجد ممرضين مسجلين</p>
                     </div>
                 `;
@@ -843,7 +843,7 @@
             if (drivers.length === 0) {
                 container.innerHTML = `
                     <div class="empty-state">
-                        <div class="empty-state-icon">👨‍✈️</div>
+                        <div class="empty-state-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" style="width:48px;height:48px;opacity:0.4;"><rect x="1" y="3" width="15" height="13"/><polygon points="16 8 20 8 23 11 23 16 16 16 16 8"/><circle cx="5.5" cy="18.5" r="2.5"/><circle cx="18.5" cy="18.5" r="2.5"/></svg></div>
                         <p>لا يوجد سائقين مسجلين</p>
                     </div>
                 `;
@@ -892,7 +892,7 @@
             if (vehicles.length === 0) {
                 container.innerHTML = `
                     <div class="empty-state">
-                        <div class="empty-state-icon">🚑</div>
+                        <div class="empty-state-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" style="width:48px;height:48px;opacity:0.4;"><rect x="1" y="3" width="15" height="13"/><polygon points="16 8 20 8 23 11 23 16 16 16 16 8"/><circle cx="5.5" cy="18.5" r="2.5"/><circle cx="18.5" cy="18.5" r="2.5"/><line x1="7" y1="7" x2="7" y2="11"/><line x1="5" y1="9" x2="9" y2="9"/></svg></div>
                         <p>لا توجد سيارات مسجلة</p>
                     </div>
                 `;
@@ -922,7 +922,7 @@
                                 </td>
                                 <td>
                                     <div class="action-btns" style="gap:6px;">
-                                        ${!vehicle.isDefault ? `<button class="action-btn" onclick="setAsDefault(${index})" style="background:#dbeafe;color:#1e40af;font-size:11px;padding:4px 8px;">⭐ تعيين كافتراضي</button>` : ''}
+                                        ${!vehicle.isDefault ? `<button class="action-btn" onclick="setAsDefault(${index})" style="background:#dbeafe;color:#1e40af;font-size:11px;padding:4px 8px;">تعيين كافتراضي</button>` : ''}
                                         <button class="action-btn edit" onclick="editVehicle(${index})">تعديل</button>
                                         <button class="action-btn delete" onclick="deleteVehicle(${index})">حذف</button>
                                     </div>
